tests/compile_fail/deref_coerce.stderr
error[E0026]: struct `Foo` does not have a field named `foo`
  --> $DIR/deref_coerce.rs:26:24
   |
26 |     project!(Foo, cell.foo)
   |                        ^^^ struct `Foo` does not have this field
